--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "e-commerce",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon src/app.js"
+    "test": "nodemon src/app.js",
+    "start": "node src/app.js"
   },
   "author": "Diana Gomez",
   "license": "ISC",
