--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gemas",
   "version": "1.0.0",
   "description": "e-commerce",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "nodemon src/app.js",
     "start": "node src/app.js"
@@ -10,6 +10,7 @@
   "author": "Diana Gomez",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.3",
